--- a/P001700.opf/meta.yml
+++ b/P001700.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P001700
+id: P001700
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1923
   title: བདེ་གཤེགས་བསྟན་པའི་གསལ་བྱེད་ཆོས་ཀྱི་འབྱུང་གནས
-  volume: ''
   author: ''
+  volumes: {}
