--- a/P001700.opf/meta.yml
+++ b/P001700.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1923
   title: བདེ་གཤེགས་བསྟན་པའི་གསལ་བྱེད་ཆོས་ཀྱི་འབྱུང་གནས
   author: ''
-  volumes: {}
+  volumes:
+    eabe1ea9c8c147a4acb69ebebd0edaeb:
+      image_group_id: I5711
+      title: ''
+      volume_number: 1
+      total_pages: 393
