--- a/P001700.opf/layers/v001/Pagination.yml
+++ b/P001700.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 59e4311e2dce49ed8d46e77370c5b58f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   1ac2bd9250da4feb8234ed50df149e08:
