--- a/P001700.opf/meta.yml
+++ b/P001700.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P001700
 initial_creation_type: ocr
+created_at: 25/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1923
   title: བདེ་གཤེགས་བསྟན་པའི་གསལ་བྱེད་ཆོས་ཀྱི་འབྱུང་གནས
