--- a/P001700.opf/meta.yml
+++ b/P001700.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P001700
 initial_creation_type: ocr
 created_at: 25/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:15:26.446281
 source_metadata:
   id: bdr:W1923
   title: བདེ་གཤེགས་བསྟན་པའི་གསལ་བྱེད་ཆོས་ཀྱི་འབྱུང་གནས
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 393
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
